<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/settings_appearance">
        <ListPreference
            android:key="app_theme"
            android:title="App Theme"
            android:summary="Choose your theme preference."
            android:entries="@array/Themes"
            android:entryValues="@array/ThemeData"
            android:defaultValue="@string/settings_device_theme_use_device_theme" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="listen_settings"
        android:title="@string/settings_listens">

        <EditTextPreference
            android:key="listenbrainz_user_token"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="@string/settings_listenbrainz_token_summary"
            android:title="@string/settings_listenbrainz_token"
            android:defaultValue="" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="listening_enabled"
            android:title="@string/settings_listenbrainz_enabled" />
    </PreferenceCategory>


</PreferenceScreen>
